--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container" style="margin-top: -70px" ng-controller="dictionaryCtrl">
     <div class="navbar navbar-fixed-top navbar-fixed-top navbar-inverse">
         <div id="orgNameDiv">
-            <input class="form-control typeahead" type="text" placeholder="Organization Name" id="test" onkeyup="$(this).scope().organizationName = this.value;" ng-click="setOrgNameList()" ng-model="name"  ng-class="{'error': err.orgName1}">
+            <input class="form-control typeahead" type="text" placeholder="Organization Name" id="test" onkeyup="$(this).scope().organizationName = this.value;" ng-click="setOrgNameList()" ng-model="name"  ng-class="{'error': err.orgName1}"/>
         </div>
     </div>
 </div>
